demo.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-svc
spec: 
  type: NodePort              # 叢集外部存取
  selector:
    app: demo        # 綁定 labels 為 app:appworks-demo 的 pod
  ports:
    - protocol: TCP
      port: 80
