mongodb.modify.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mongodb
  labels:
    app: mongodb    
spec:
  containers:
  - name: mongodb
    image: mongo    
    ports:
      - containerPort: 27017 
    volumeMounts:
    - mountPath: /data/db
      name: mongo-data
  volumes:
  - name: mongo-data
    hostPath:
      path: /tmp/mongod

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-svc  
spec:
  type: ClusterIP    
  selector:
    app: mongodb     
  ports:
    - protocol: TCP
      port: 27017
