ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo
spec:
  rules:
  - host: aaa.test.com
    http:
      paths:
      - backend: 
          serviceName: demo-svc
          servicePort: 80
